--- a/BucketList/en.lproj/MainStoryboard.storyboard
+++ b/BucketList/en.lproj/MainStoryboard.storyboard
@@ -24,12 +24,13 @@
                         <barButtonItem key="rightBarButtonItem" systemItem="add" id="N7Z-uO-YWN">
                             <color key="tintColor" red="0.69019609689999994" green="0.5647059083" blue="0.36078432199999999" alpha="1" colorSpace="deviceRGB"/>
                             <connections>
-                                <segue destination="riN-va-HWp" kind="push" identifier="addSegue" id="Wa0-Jc-TWz"/>
+                                <segue destination="JfQ-2P-sut" kind="push" id="t5N-tf-f7R"/>
                             </connections>
                         </barButtonItem>
                     </navigationItem>
                     <connections>
                         <outlet property="navBar" destination="J6r-3Q-kMb" id="Gfg-qx-VyF"/>
+                        <segue destination="Ipe-iO-bV7" kind="push" identifier="tableSegue" id="DAb-9v-dLK"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="4" sceneMemberID="firstResponder"/>
@@ -37,55 +38,127 @@
             <point key="canvasLocation" x="-353" y="106"/>
         </scene>
         <!--Add View Controller-->
-        <scene sceneID="OOP-zZ-KUy">
+        <scene sceneID="MVW-eJ-s4A">
             <objects>
-                <viewController id="riN-va-HWp" customClass="SEBAddViewController" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="T4E-1n-hYp">
+                <viewController id="JfQ-2P-sut" customClass="SEBAddViewController" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="7IN-YR-sQG">
                         <rect key="frame" x="0.0" y="64" width="320" height="416"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
-                            <imageView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" image="background3.png" translatesAutoresizingMaskIntoConstraints="NO" id="abJ-An-T7Z"/>
-                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Title" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="eET-yU-fI9">
-                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                            <imageView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" image="background3.png" translatesAutoresizingMaskIntoConstraints="NO" id="EyA-HM-3Wo"/>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Title" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="sc6-4l-6Zd">
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
-                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Description" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="TwR-B6-6Xh">
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Description" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="LUT-yM-T4p">
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="eET-yU-fI9" firstAttribute="leading" secondItem="T4E-1n-hYp" secondAttribute="leading" constant="8" type="user" id="61s-KZ-NaQ"/>
-                            <constraint firstItem="abJ-An-T7Z" firstAttribute="top" secondItem="T4E-1n-hYp" secondAttribute="top" type="default" id="88a-La-sKk"/>
-                            <constraint firstItem="eET-yU-fI9" firstAttribute="top" secondItem="T4E-1n-hYp" secondAttribute="top" constant="35" id="KRV-dC-Tjs"/>
-                            <constraint firstItem="TwR-B6-6Xh" firstAttribute="leading" secondItem="T4E-1n-hYp" secondAttribute="leading" constant="8" type="user" id="KZD-O6-YH0"/>
-                            <constraint firstAttribute="trailing" secondItem="TwR-B6-6Xh" secondAttribute="trailing" constant="8" type="user" id="f53-xf-rJ0"/>
-                            <constraint firstAttribute="trailing" secondItem="eET-yU-fI9" secondAttribute="trailing" constant="8" type="user" id="ifM-sn-rw0"/>
-                            <constraint firstItem="TwR-B6-6Xh" firstAttribute="top" secondItem="T4E-1n-hYp" secondAttribute="top" constant="103" id="sTG-8a-Swz"/>
-                            <constraint firstItem="abJ-An-T7Z" firstAttribute="leading" secondItem="T4E-1n-hYp" secondAttribute="leading" type="default" id="yhZ-dC-SgW"/>
+                            <constraint firstItem="LUT-yM-T4p" firstAttribute="leading" secondItem="7IN-YR-sQG" secondAttribute="leading" constant="20" symbolic="YES" type="default" id="0Oa-Jx-jWO"/>
+                            <constraint firstItem="sc6-4l-6Zd" firstAttribute="top" secondItem="7IN-YR-sQG" secondAttribute="top" constant="36" id="1Wz-z1-NIn"/>
+                            <constraint firstAttribute="trailing" secondItem="sc6-4l-6Zd" secondAttribute="trailing" constant="20" symbolic="YES" type="default" id="9nW-SX-pL6"/>
+                            <constraint firstItem="EyA-HM-3Wo" firstAttribute="top" secondItem="7IN-YR-sQG" secondAttribute="top" type="default" id="ACE-DO-Q7s"/>
+                            <constraint firstItem="EyA-HM-3Wo" firstAttribute="leading" secondItem="7IN-YR-sQG" secondAttribute="leading" type="default" id="Bw4-X9-axi"/>
+                            <constraint firstItem="sc6-4l-6Zd" firstAttribute="leading" secondItem="7IN-YR-sQG" secondAttribute="leading" constant="20" symbolic="YES" type="default" id="DeA-MC-KIl"/>
+                            <constraint firstAttribute="trailing" secondItem="LUT-yM-T4p" secondAttribute="trailing" constant="20" symbolic="YES" type="default" id="EKE-xK-Yjg"/>
+                            <constraint firstItem="LUT-yM-T4p" firstAttribute="top" secondItem="7IN-YR-sQG" secondAttribute="top" constant="88" id="yYy-dZ-ico"/>
                         </constraints>
                     </view>
-                    <navigationItem key="navigationItem" id="QwH-Wa-bON">
-                        <barButtonItem key="rightBarButtonItem" title="Save" id="aL6-HR-4Wm">
+                    <navigationItem key="navigationItem" id="bD6-uy-5QW">
+                        <barButtonItem key="rightBarButtonItem" title="Save" id="Ve9-18-mPf">
                             <color key="tintColor" red="0.69019609689999994" green="0.5647059083" blue="0.36078432199999999" alpha="1" colorSpace="deviceRGB"/>
                             <connections>
-                                <action selector="saveItem:" destination="riN-va-HWp" id="lyk-zZ-SHh"/>
-                                <segue destination="xQJ-5S-VLS" kind="unwind" unwindAction="unwindFromSEBAddViewController:" id="hOf-ff-3AQ"/>
+                                <segue destination="MsZ-qx-lRZ" kind="unwind" unwindAction="unwindFromSEBAddViewController:" id="aaI-1l-TcG"/>
                             </connections>
                         </barButtonItem>
                     </navigationItem>
                     <connections>
-                        <outlet property="addNavBar" destination="QwH-Wa-bON" id="MDJ-DB-bYO"/>
-                        <outlet property="descriptionBox" destination="TwR-B6-6Xh" id="Ewt-SJ-fCa"/>
-                        <outlet property="saveButton" destination="aL6-HR-4Wm" id="hgi-gW-c5U"/>
-                        <outlet property="titleBox" destination="eET-yU-fI9" id="bvD-qo-BNY"/>
+                        <outlet property="addViewNavBar" destination="bD6-uy-5QW" id="ihY-vc-Esh"/>
+                        <outlet property="descriptionBox" destination="LUT-yM-T4p" id="RZ6-hG-L4k"/>
+                        <outlet property="titleBox" destination="sc6-4l-6Zd" id="sl5-gb-DOz"/>
                     </connections>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="Nhu-vr-2lL" userLabel="First Responder" sceneMemberID="firstResponder"/>
-                <exit id="xQJ-5S-VLS" userLabel="Exit" sceneMemberID="exit"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="ga8-TG-0Fe" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <exit id="MsZ-qx-lRZ" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
-            <point key="canvasLocation" x="107" y="106"/>
+            <point key="canvasLocation" x="253" y="-111"/>
+        </scene>
+        <!--Detail View Controller-->
+        <scene sceneID="jqF-42-VON">
+            <objects>
+                <viewController id="Ipe-iO-bV7" customClass="SEBDetailViewController" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="Eh3-At-Tge">
+                        <rect key="frame" x="0.0" y="64" width="320" height="416"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <subviews>
+                            <imageView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" image="background3.png" translatesAutoresizingMaskIntoConstraints="NO" id="eCb-xv-p49"/>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="HL9-mZ-Phb">
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="jOq-Ib-wCy">
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Title" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ojk-JN-aRR">
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="28" id="8s5-sl-jsI"/>
+                                    <constraint firstAttribute="width" constant="48" id="q9o-Kx-rbz"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="Noteworthy-Bold" family="Noteworthy" pointSize="24"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Description" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="X7R-7w-Z19">
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="28" id="2bC-l1-RRK"/>
+                                    <constraint firstAttribute="width" constant="138" id="9R8-2o-aT5"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="Noteworthy-Bold" family="Noteworthy" pointSize="24"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Location" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Gi2-Kb-BJg">
+                                <fontDescription key="fontDescription" name="Noteworthy-Bold" family="Noteworthy" pointSize="24"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="6B9-Td-aPb">
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="184" id="9BM-cF-7q2"/>
+                                </constraints>
+                            </mapView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="jOq-Ib-wCy" firstAttribute="top" secondItem="Eh3-At-Tge" secondAttribute="top" constant="103" id="8WM-Ip-gw2"/>
+                            <constraint firstItem="Gi2-Kb-BJg" firstAttribute="leading" secondItem="X7R-7w-Z19" secondAttribute="leading" type="default" id="EuZ-1X-g4e"/>
+                            <constraint firstItem="6B9-Td-aPb" firstAttribute="leading" secondItem="Eh3-At-Tge" secondAttribute="leading" constant="20" symbolic="YES" type="default" id="Iic-Ih-mW7"/>
+                            <constraint firstItem="Ojk-JN-aRR" firstAttribute="top" secondItem="Eh3-At-Tge" secondAttribute="top" constant="7" id="OCc-uy-H4m"/>
+                            <constraint firstItem="eCb-xv-p49" firstAttribute="top" secondItem="Eh3-At-Tge" secondAttribute="top" type="default" id="VTN-Kq-MVl"/>
+                            <constraint firstItem="HL9-mZ-Phb" firstAttribute="top" secondItem="Eh3-At-Tge" secondAttribute="top" constant="36" id="Z5Z-9W-5wl"/>
+                            <constraint firstItem="HL9-mZ-Phb" firstAttribute="leading" secondItem="Eh3-At-Tge" secondAttribute="leading" constant="20" symbolic="YES" type="default" id="c79-1Z-d3r"/>
+                            <constraint firstAttribute="trailing" secondItem="jOq-Ib-wCy" secondAttribute="trailing" constant="20" symbolic="YES" type="default" id="dlb-GQ-Y50"/>
+                            <constraint firstItem="Gi2-Kb-BJg" firstAttribute="trailing" secondItem="X7R-7w-Z19" secondAttribute="trailing" type="default" id="eOz-MF-YPk"/>
+                            <constraint firstItem="eCb-xv-p49" firstAttribute="leading" secondItem="Eh3-At-Tge" secondAttribute="leading" type="default" id="jX0-X0-WBk"/>
+                            <constraint firstAttribute="trailing" secondItem="HL9-mZ-Phb" secondAttribute="trailing" constant="20" symbolic="YES" type="default" id="mb4-FV-CFT"/>
+                            <constraint firstItem="Ojk-JN-aRR" firstAttribute="centerX" secondItem="HL9-mZ-Phb" secondAttribute="centerX" type="default" id="njx-8l-Tmu"/>
+                            <constraint firstItem="Gi2-Kb-BJg" firstAttribute="top" secondItem="jOq-Ib-wCy" secondAttribute="bottom" constant="8" symbolic="YES" type="default" id="oto-pJ-ebI"/>
+                            <constraint firstItem="X7R-7w-Z19" firstAttribute="top" secondItem="HL9-mZ-Phb" secondAttribute="bottom" constant="8" symbolic="YES" type="default" id="qhk-50-cr7"/>
+                            <constraint firstAttribute="trailing" secondItem="6B9-Td-aPb" secondAttribute="trailing" constant="20" symbolic="YES" type="default" id="t5c-eH-jK6"/>
+                            <constraint firstItem="6B9-Td-aPb" firstAttribute="top" secondItem="Eh3-At-Tge" secondAttribute="top" constant="178" id="xeS-bD-LVK"/>
+                            <constraint firstItem="jOq-Ib-wCy" firstAttribute="leading" secondItem="Eh3-At-Tge" secondAttribute="leading" constant="20" symbolic="YES" type="default" id="ySQ-k5-lqc"/>
+                            <constraint firstItem="jOq-Ib-wCy" firstAttribute="centerX" secondItem="X7R-7w-Z19" secondAttribute="centerX" type="default" id="yZZ-5o-3Om"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" id="ddm-h3-xGM"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="ObC-er-dJU" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="253" y="487"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="LEu-C3-OuY">
@@ -120,6 +193,9 @@
                 <relationship kind="outlet" name="descriptionBox" candidateClass="UITextField"/>
                 <relationship kind="outlet" name="titleBox" candidateClass="UITextField"/>
             </relationships>
+        </class>
+        <class className="SEBDetailViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/SEBDetailViewController.h"/>
         </class>
         <class className="SEBViewController" superclassName="UIViewController">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/SEBViewController.h"/>
