--- a/BucketList/en.lproj/MainStoryboard.storyboard
+++ b/BucketList/en.lproj/MainStoryboard.storyboard
@@ -46,11 +46,11 @@
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
                             <imageView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" image="background3.png" translatesAutoresizingMaskIntoConstraints="NO" id="nip-eK-6sv"/>
-                            <textField opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" enabled="NO" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="BaC-5x-PoS">
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" enabled="NO" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="BaC-5x-PoS">
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
-                            <textField opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" enabled="NO" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="K57-gF-58x">
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" enabled="NO" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="K57-gF-58x">
                                 <accessibility key="accessibilityConfiguration">
                                     <accessibilityTraits key="traits" none="YES" notEnabled="YES"/>
                                     <bool key="isElement" value="NO"/>
@@ -109,12 +109,20 @@
                             <constraint firstItem="WU6-p3-cI1" firstAttribute="top" secondItem="lW1-zZ-CFA" secondAttribute="top" constant="20" symbolic="YES" type="default" id="s7s-FP-Fve"/>
                         </constraints>
                     </view>
-                    <navigationItem key="navigationItem" id="hlG-Xl-BSi"/>
+                    <navigationItem key="navigationItem" id="hlG-Xl-BSi">
+                        <barButtonItem key="rightBarButtonItem" title="Edit" id="b6W-4Q-wqF">
+                            <color key="tintColor" red="0.69019609689999994" green="0.5647059083" blue="0.36078432199999999" alpha="1" colorSpace="deviceRGB"/>
+                            <connections>
+                                <action selector="editItem:" destination="aet-AT-IBj" id="ZW7-F5-dst"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                     <connections>
                         <outlet property="detailViewDescription" destination="K57-gF-58x" id="THK-LT-tRB"/>
                         <outlet property="detailViewMapView" destination="PVg-mB-k3X" id="c9o-SH-Tnc"/>
                         <outlet property="detailViewNavBar" destination="hlG-Xl-BSi" id="51f-Kg-Hli"/>
                         <outlet property="detailViewTitle" destination="BaC-5x-PoS" id="fmS-R0-diq"/>
+                        <outlet property="editButton" destination="b6W-4Q-wqF" id="aQZ-O5-34q"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ueI-z9-DFP" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -192,6 +200,40 @@
     <resources>
         <image name="background3.png" width="320" height="480"/>
     </resources>
+    <classes>
+        <class className="NSLayoutConstraint" superclassName="NSObject">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/NSLayoutConstraint.h"/>
+        </class>
+        <class className="SEBAddViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/SEBAddViewController.h"/>
+            <relationships>
+                <relationship kind="outlet" name="addViewNavBar" candidateClass="UINavigationItem"/>
+                <relationship kind="outlet" name="descriptionBox" candidateClass="UITextField"/>
+                <relationship kind="outlet" name="titleBox" candidateClass="UITextField"/>
+            </relationships>
+        </class>
+        <class className="SEBDetailViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/SEBDetailViewController.h"/>
+            <relationships>
+                <relationship kind="action" name="editItem:"/>
+                <relationship kind="outlet" name="detailViewDescription" candidateClass="UITextField"/>
+                <relationship kind="outlet" name="detailViewMapView" candidateClass="MKMapView"/>
+                <relationship kind="outlet" name="detailViewNavBar" candidateClass="UINavigationItem"/>
+                <relationship kind="outlet" name="detailViewTitle" candidateClass="UITextField"/>
+                <relationship kind="outlet" name="editButton" candidateClass="UIBarButtonItem"/>
+            </relationships>
+        </class>
+        <class className="SEBViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/SEBViewController.h"/>
+            <relationships>
+                <relationship kind="action" name="unwindFromSEBAddViewController:" candidateClass="UIStoryboardSegue"/>
+                <relationship kind="outlet" name="navBar" candidateClass="UINavigationItem"/>
+            </relationships>
+        </class>
+        <class className="UIStoryboardSegue" superclassName="NSObject">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/UIStoryboardSegue.h"/>
+        </class>
+    </classes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar"/>
         <simulatedOrientationMetrics key="orientation"/>
