--- a/BucketList/en.lproj/MainStoryboard.storyboard
+++ b/BucketList/en.lproj/MainStoryboard.storyboard
@@ -60,8 +60,8 @@
                             </textField>
                             <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Title" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WU6-p3-cI1">
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="48" id="YBK-3U-Ian"/>
                                     <constraint firstAttribute="height" constant="28" id="ZXN-EP-VMq"/>
+                                    <constraint firstAttribute="width" constant="48" id="zoa-0N-7MR"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" name="Noteworthy-Bold" family="Noteworthy" pointSize="24"/>
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
@@ -83,30 +83,59 @@
                             </label>
                             <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="PVg-mB-k3X">
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="184" id="oLm-u7-x2c"/>
+                                    <constraint firstAttribute="height" constant="151" id="M4F-sm-WBv"/>
                                 </constraints>
                             </mapView>
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="created 01/12/12" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="N4I-J4-gGn">
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="21" id="JUS-cK-vtY"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="Noteworthy-Bold" family="Noteworthy" pointSize="24"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="oCV-jd-kqd">
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="35" id="Ts0-ou-38X"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
+                                <state key="normal" title="Mark as Done!">
+                                    <color key="titleColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <state key="highlighted">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="toggleDone:" destination="aet-AT-IBj" eventType="touchUpInside" id="9D2-zc-iZg"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="nip-eK-6sv" firstAttribute="top" secondItem="lW1-zZ-CFA" secondAttribute="top" type="default" id="0od-mR-uQ2"/>
                             <constraint firstItem="nip-eK-6sv" firstAttribute="leading" secondItem="lW1-zZ-CFA" secondAttribute="leading" type="default" id="8L0-Fu-usT"/>
-                            <constraint firstItem="IJ9-Yq-cW8" firstAttribute="top" secondItem="BaC-5x-PoS" secondAttribute="bottom" constant="8" symbolic="YES" type="default" id="9CQ-jZ-YeP"/>
                             <constraint firstAttribute="trailing" secondItem="K57-gF-58x" secondAttribute="trailing" constant="20" symbolic="YES" type="default" id="AhY-IF-gVX"/>
-                            <constraint firstItem="BaC-5x-PoS" firstAttribute="top" secondItem="lW1-zZ-CFA" secondAttribute="top" constant="49" id="Av2-RX-Ck3"/>
                             <constraint firstItem="PVg-mB-k3X" firstAttribute="leading" secondItem="lW1-zZ-CFA" secondAttribute="leading" constant="20" symbolic="YES" type="default" id="BSC-Ee-iWV"/>
-                            <constraint firstItem="PVg-mB-k3X" firstAttribute="top" secondItem="lW1-zZ-CFA" secondAttribute="top" constant="184" id="CDS-Wr-wes"/>
                             <constraint firstAttribute="trailing" secondItem="BaC-5x-PoS" secondAttribute="trailing" constant="20" symbolic="YES" type="default" id="DV0-GQ-LKr"/>
                             <constraint firstItem="Kdm-cU-f2f" firstAttribute="leading" secondItem="IJ9-Yq-cW8" secondAttribute="leading" type="default" id="DdK-5M-a3s"/>
                             <constraint firstItem="BaC-5x-PoS" firstAttribute="centerX" secondItem="WU6-p3-cI1" secondAttribute="centerX" type="default" id="DyF-DM-oKs"/>
-                            <constraint firstItem="IJ9-Yq-cW8" firstAttribute="centerX" secondItem="K57-gF-58x" secondAttribute="centerX" type="default" id="EED-Nx-7zj"/>
+                            <constraint firstAttribute="bottom" secondItem="N4I-J4-gGn" secondAttribute="bottom" constant="59" id="GCD-Gj-xdP"/>
                             <constraint firstItem="BaC-5x-PoS" firstAttribute="leading" secondItem="lW1-zZ-CFA" secondAttribute="leading" constant="20" symbolic="YES" type="default" id="Gve-mb-TlF"/>
                             <constraint firstItem="Kdm-cU-f2f" firstAttribute="trailing" secondItem="IJ9-Yq-cW8" secondAttribute="trailing" type="default" id="J95-QX-4eF"/>
+                            <constraint firstItem="PVg-mB-k3X" firstAttribute="top" secondItem="lW1-zZ-CFA" secondAttribute="top" constant="169" id="JOM-Z3-eTW"/>
+                            <constraint firstItem="WU6-p3-cI1" firstAttribute="top" secondItem="lW1-zZ-CFA" secondAttribute="top" constant="5" id="JuX-pK-pwU"/>
                             <constraint firstItem="K57-gF-58x" firstAttribute="leading" secondItem="lW1-zZ-CFA" secondAttribute="leading" constant="20" symbolic="YES" type="default" id="Mwg-Ck-ZTx"/>
+                            <constraint firstItem="IJ9-Yq-cW8" firstAttribute="top" secondItem="BaC-5x-PoS" secondAttribute="bottom" constant="8" symbolic="YES" type="default" id="T5C-Be-DAh"/>
                             <constraint firstAttribute="trailing" secondItem="PVg-mB-k3X" secondAttribute="trailing" constant="20" symbolic="YES" type="default" id="T9j-cX-1Yl"/>
-                            <constraint firstItem="K57-gF-58x" firstAttribute="top" secondItem="lW1-zZ-CFA" secondAttribute="top" constant="116" id="exg-A9-65m"/>
-                            <constraint firstItem="Kdm-cU-f2f" firstAttribute="top" secondItem="lW1-zZ-CFA" secondAttribute="top" constant="147" id="eyC-sX-tje"/>
-                            <constraint firstItem="WU6-p3-cI1" firstAttribute="top" secondItem="lW1-zZ-CFA" secondAttribute="top" constant="20" symbolic="YES" type="default" id="s7s-FP-Fve"/>
+                            <constraint firstItem="BaC-5x-PoS" firstAttribute="top" secondItem="lW1-zZ-CFA" secondAttribute="top" constant="35" id="Zm9-pe-qEp"/>
+                            <constraint firstItem="Kdm-cU-f2f" firstAttribute="top" secondItem="lW1-zZ-CFA" secondAttribute="top" constant="130" id="d9v-ml-CNg"/>
+                            <constraint firstAttribute="bottom" secondItem="oCV-jd-kqd" secondAttribute="bottom" constant="12" id="mJM-10-WaH"/>
+                            <constraint firstItem="K57-gF-58x" firstAttribute="top" secondItem="lW1-zZ-CFA" secondAttribute="top" constant="103" id="oht-4Q-WfK"/>
+                            <constraint firstItem="oCV-jd-kqd" firstAttribute="leading" secondItem="Kdm-cU-f2f" secondAttribute="leading" type="default" id="rLs-Pm-uwN"/>
+                            <constraint firstItem="oCV-jd-kqd" firstAttribute="trailing" secondItem="Kdm-cU-f2f" secondAttribute="trailing" type="default" id="rte-IR-LAL"/>
+                            <constraint firstItem="K57-gF-58x" firstAttribute="centerX" secondItem="IJ9-Yq-cW8" secondAttribute="centerX" type="default" id="wiS-SN-NYM"/>
+                            <constraint firstAttribute="trailing" secondItem="N4I-J4-gGn" secondAttribute="trailing" constant="20" symbolic="YES" type="default" id="xwj-vN-JWY"/>
+                            <constraint firstItem="N4I-J4-gGn" firstAttribute="leading" secondItem="lW1-zZ-CFA" secondAttribute="leading" constant="20" symbolic="YES" type="default" id="yuQ-xP-tm2"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="hlG-Xl-BSi">
@@ -118,7 +147,9 @@
                         </barButtonItem>
                     </navigationItem>
                     <connections>
+                        <outlet property="detailViewDate" destination="N4I-J4-gGn" id="IkU-Jr-AFM"/>
                         <outlet property="detailViewDescription" destination="K57-gF-58x" id="THK-LT-tRB"/>
+                        <outlet property="detailViewDone" destination="oCV-jd-kqd" id="QRp-54-5mE"/>
                         <outlet property="detailViewMapView" destination="PVg-mB-k3X" id="c9o-SH-Tnc"/>
                         <outlet property="detailViewNavBar" destination="hlG-Xl-BSi" id="51f-Kg-Hli"/>
                         <outlet property="detailViewTitle" destination="BaC-5x-PoS" id="fmS-R0-diq"/>
@@ -215,8 +246,9 @@
         <class className="SEBDetailViewController" superclassName="UIViewController">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/SEBDetailViewController.h"/>
             <relationships>
-                <relationship kind="action" name="editItem:"/>
+                <relationship kind="outlet" name="detailViewDate" candidateClass="UILabel"/>
                 <relationship kind="outlet" name="detailViewDescription" candidateClass="UITextField"/>
+                <relationship kind="outlet" name="detailViewDone" candidateClass="UIButton"/>
                 <relationship kind="outlet" name="detailViewMapView" candidateClass="MKMapView"/>
                 <relationship kind="outlet" name="detailViewNavBar" candidateClass="UINavigationItem"/>
                 <relationship kind="outlet" name="detailViewTitle" candidateClass="UITextField"/>
@@ -226,12 +258,8 @@
         <class className="SEBViewController" superclassName="UIViewController">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/SEBViewController.h"/>
             <relationships>
-                <relationship kind="action" name="unwindFromSEBAddViewController:" candidateClass="UIStoryboardSegue"/>
                 <relationship kind="outlet" name="navBar" candidateClass="UINavigationItem"/>
             </relationships>
-        </class>
-        <class className="UIStoryboardSegue" superclassName="NSObject">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/UIStoryboardSegue.h"/>
         </class>
     </classes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
